# Hyperflow

./: .gitignore  MANIFEST.in  Makefile  README.md  RELEASE_NOTES_v0.2.0.md  REPOSITORY_GOVERNANCE.md  input_fail.json  input_success.json  main.py  openrouter.py  pyproject.toml  pytest.ini  requirements.txt
boost/: ARCHITECTURE.md  CANONICAL_EMOJI_CONTROL_LIBRARY.md  README.md  RELEASE_NOTES_v0.1.0-stable.md  RELEASE_NOTES_v0.1.0.md
configs/: edde-core.json  mps-regulator.json
core/: BASELINE_ACCEPTANCE.md  BASELINE_QUALIFICATION_GATE.md  CANONICAL_RUNTIME_SURFACE.md  CORE_MODULE_REGISTRY.md  CORE_QUALIFICATION_CHECKLIST.md  MASTER_HYPERFLOW_FINAL.md  MERGE_CHECKLIST.md  MPS_V5_2_RUNTIME_SPEC.md  MVP_RUNTIME_FREEZE.md  RC_RELEASE_CHECKLIST.md  README.md
docs/: ACCEPTANCE.md  AUTHORITY_MAP.md  OPERATORS.md  README.md
experimental/: HYPERFLOW_COMPARE_DIFF_MODE.md  MASTER_HYPERFLOW_FINAL_BACKLOG.md  README.md  SYSTEM_TIMELINE_v1.md
hyperflow/: __init__.py  __main__.py  config.py  release_verify.py  runtime_kernel.py  runtime_paths.py  version.py
scanner/: __init__.py  core.py
scripts/: baseline_qualification.sh  check_everything.sh  clean_repo.sh  import_guard_scan.py  install_editable.sh  make_source_zip.py  packaging_smoke.sh  release_check.sh  test_suite.sh
tests/: _runtime_freeze.py  conftest.py  test_contract_version_lock.py  test_emoji_parser.py  test_llm_integration.py  test_mps_integration.py  test_no_unregistered_behavior.py  test_repo_hygiene.py  test_run_deterministic_golden.py  test_scanner.py  test_single_runtime_enforced.py
(+212 files in other folders)
